--- a/css/main.css
+++ b/css/main.css
@@ -101,35 +101,35 @@ header nav ul li a{
 	border-bottom: 3px solid #77a466;
 }
 
-.main-title h2 {
+#main-title h2 {
 	text-align: left;
 	padding: 5px 0;
 	color: #77a466;
 }
-.main-title p {
+#main-title p {
 	padding: 0;
 	font-size: 16px;
 	
 }
 
-.section-one,
-.section-two,
-.section-three {
+#section-one,
+#section-two,
+#section-three {
 	width: 33%;
 	border-top: 1px solid #eee;
 }
 
-.section-one h3 {
+#section-one h3 {
 	padding: 10px 0;
 }
 
-.section-two {
+#section-two {
 	border-left: 1px solid #eee;
 	border-right: 1px solid #eee;
 }
 
-.section-two h3,
-.section-three h3 {
+#section-two h3,
+#section-three h3 {
 	padding: 10px 30px;
 }
 
@@ -179,14 +179,14 @@ footer span {
     border-top: 1px solid #eee;
 }
 
-.section-one,
-.section-two,
-.section-three {
+#section-one,
+#section-two,
+#section-three {
     border-top: none;
     flex-basis: 30%;
 }
 
-.section-two {
+#section-two {
     border-left: 1px solid #eee;
     border-right: 1px solid #eee;
     padding: 0 20px;
